--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -3,7 +3,7 @@ FROM node:18 AS base
 CMD [ "bash" ]
 
 # Build
-FROM base AS build
+FROM base AS test-and-build
 COPY . /workspace
 WORKDIR /workspace
 ARG REACT_APP_API_SERVER
@@ -11,5 +11,5 @@ RUN npm ci && npm run test && npm run build
 
 # Hosting in nginx
 FROM nginx:latest AS production
-COPY --from=build /workspace/build /var/www
+COPY --from=test-and-build /workspace/build /var/www
 COPY nginx.conf /etc/nginx/conf.d/default.conf
