--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,18 @@
-name: Deploy Simple CI/CD
+name: Deploy Simple CI/CD 
 
 on:
   push:
     branches: ["main"]
 
 env:
-  AWS_REGION: us-east-1
+  AWS_REGION: us-west-2
   ECS_SERVICE: simple-cicd-service
   ECS_CLUSTER: simple-cicd-cluster
   ECS_TASK_DEFINITION: .aws/task-definition.json
 
 permissions:
   contents: read
+
 
 jobs:
   web-test-build-image:
@@ -21,7 +22,7 @@ jobs:
     defaults:
       run:
         working-directory: web
-
+    
     steps:
       - uses: actions/checkout@v3
 
@@ -55,7 +56,7 @@ jobs:
     defaults:
       run:
         working-directory: api
-
+  
     steps:
       - uses: actions/checkout@v3
 
@@ -84,7 +85,7 @@ jobs:
 
   deploy:
     name: Deploy
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-20.04 
     needs: [web-test-build-image, api-test-build-image]
 
     steps:
@@ -125,6 +126,7 @@ jobs:
           service: ${{ env.ECS_SERVICE }}
           cluster: ${{ env.ECS_CLUSTER }}
           wait-for-service-stability: true
+
 # Web Container Build/Test
 ## Get Source
 ## Build/Test
@@ -144,4 +146,7 @@ jobs:
 ## Login AWS
 ## Edit Task Definition
 ## Deploy
+
+
+
 
