--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,19 @@
 version: '3.9'
-
 services:
   api:
     container_name: api
-    build: ./api
+    build: 
+      context: ./api
+      target: base
     ports:
       - 8080:8080
-    tty: true       # -tのこと
+    tty: true
     volumes:
       - ./api:/workspace:cached
 
   web:
     container_name: web
-    build:
+    build: 
       context: ./web
       target: base
     ports:
