--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,17 @@
-name: Deploy Simple CI/CD 
+name: Deploy Simple CI/CD
 
 on:
   push:
     branches: ["main"]
 
 env:
-  AWS_REGION: us-west-2
+  AWS_REGION: us-east-1
   ECS_SERVICE: simple-cicd-service
   ECS_CLUSTER: simple-cicd-cluster
   ECS_TASK_DEFINITION: .aws/task-definition.json
 
 permissions:
   contents: read
-
 
 jobs:
   web-test-build-image:
@@ -22,7 +21,7 @@ jobs:
     defaults:
       run:
         working-directory: web
-    
+
     steps:
       - uses: actions/checkout@v3
 
@@ -56,7 +55,7 @@ jobs:
     defaults:
       run:
         working-directory: api
-  
+
     steps:
       - uses: actions/checkout@v3
 
@@ -85,7 +84,7 @@ jobs:
 
   deploy:
     name: Deploy
-    runs-on: ubuntu-20.04 
+    runs-on: ubuntu-20.04
     needs: [web-test-build-image, api-test-build-image]
 
     steps:
@@ -126,7 +125,6 @@ jobs:
           service: ${{ env.ECS_SERVICE }}
           cluster: ${{ env.ECS_CLUSTER }}
           wait-for-service-stability: true
-
 # Web Container Build/Test
 ## Get Source
 ## Build/Test
@@ -146,7 +144,4 @@ jobs:
 ## Login AWS
 ## Edit Task Definition
 ## Deploy
-
-
-
 
